<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    android:background="#D0CFDE">



    <Button
        android:id="@+id/clearButton"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:text="@string/clear"
        android:background="#686490"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:layout_marginEnd="44dp"
        android:text="@string/save"
        android:background="#686490"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <TextView
        android:id="@+id/textView10"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="#343248"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/view_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="#1A1924"
        android:text="@string/enter_your_first_name"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/edit_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="10dp"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/view_lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_firstName" />

    <TextView
        android:id="@+id/view_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#1A1924"
        android:layout_marginStart="10dp"
        android:text="@string/enter_your_last_name"
        app:layout_constraintBottom_toTopOf="@+id/edit_lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_firstName" />

    <EditText
        android:id="@+id/edit_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:text=""
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/view_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_lastName" />

    <TextView
        android:id="@+id/view_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#1A1924"
        android:layout_marginStart="10dp"
        android:text="@string/enter_your_age"
        app:layout_constraintBottom_toTopOf="@+id/edit_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_lastName" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:layout_marginStart="10dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/view_Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_age" />

    <TextView
        android:id="@+id/view_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#1A1924"
        android:layout_marginStart="10dp"
        android:text="@string/enter_your_username"
        app:layout_constraintBottom_toTopOf="@+id/edit_Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_age" />

    <EditText
        android:id="@+id/edit_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/view_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_Username" />

    <TextView
        android:id="@+id/view_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:textColor="#1A1924"
        android:text="@string/enter_your_e_mail"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Username" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="250dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_email" />

</androidx.constraintlayout.widget.ConstraintLayout>